--- a/HR_analysis_GPS_LC_newtags_11July2018.Rmd
+++ b/HR_analysis_GPS_LC_newtags_11July2018.Rmd
@@ -30,9 +30,11 @@ library(readxl)
 library(rgdal)
 library(leaflet) 
 library(ggplot2)
+library(lubridate)
+library(tidyverse)
 
-internet <- FALSE
-save.figure <- F
+internet <- TRUE
+save.figure <- TRUE
 
 # Minimum number of relocations per individual to be included in HR analysis
 min_n <- 50
@@ -65,9 +67,12 @@ make.HR.dataset <- function(data.all, ID.min_n, tagproj){
               byID.utm = byID.utm))
 }
 
+# A function to compute UDs using all data and for each individual. Returns a list 
+# of estimated bandwidth, kernel density estimates as well as areas
+# for 50 and 95% UDs
 HR.bvnorm.fcn <- function(all.utm, 
                           byID.utm, 
-                          h, 
+                          h="href", 
                           hlim=c(0.03, 1.5), 
                           grid=300, extent = 1){
   
@@ -111,7 +116,12 @@ HR.bvnorm.fcn <- function(all.utm,
               area.byID = Area.byID))
 }
 
-HR.analysis.step1 <- function(min_n, data.df, tagproj, grid=300){
+# A function to conduct the first step of UD analysis. It takes a full dataset
+# and select individuals with at least min_n (50) data points. Computes UD using the 
+# reference bandwidth (href) and the method of least square cross validation (LSCV).
+# UD from the LSCV method can be plotted to find the bandwidth that minimizes the
+# CV of bandwidth. 
+HR.analysis.step1 <- function(min_n = 50, data.df, tagproj, grid=300){
   data.df %>% count(by = ArgosID) %>%
     filter(n > (min_n - 1)) %>%
     #dplyr::select(by) %>%
@@ -135,6 +145,12 @@ HR.analysis.step1 <- function(min_n, data.df, tagproj, grid=300){
               list.data = list.data))
 }
 
+# A function to conduct home range analysis for a wide range of bandwidth values.
+# INputs are multiplier values for the reference bandwidth, e.g., seq(from = 0.05, 
+# to = 0.95, by = 0.05), estimated reference bandwidth (found in the output of
+# HR.analysis.step1), an output of make.HR.dataset, and grid size (default is 300)
+# It returns a figure (faceted 95% UDs in SDB), a dataframe used to make the figure,
+# and bandwidth values that correspond to mulipliers. 
 HR.analysis <- function(h.multiplier, kd.href, data.list, grid = 300){
   h.adhoc <- h.multiplier * kd.href@h$h
 
@@ -187,6 +203,9 @@ HR.analysis <- function(h.multiplier, kd.href, data.list, grid = 300){
               h = h.adhoc))
 }
 
+# A function to compute 50 and 95% UD areas. INputs are bandwidth (h), 
+# the output from make.HR.dataset, and grid value. It uses HR.bvnorm.fcn.
+# Returns 50 and 95% areas and vertices, which are used to plot UDs. 
 compute.area <- function(h, list.data, grid=300){
   HR <- HR.bvnorm.fcn(list.data$all.utm, 
                       list.data$byID.utm, 
@@ -286,6 +305,7 @@ Section 2: read in data
 Section 2.1: Pre
 
 ```{r}
+file.date <- "2018-07-18"
 ID.names <- function(name){
   x <- unlist(strsplit(name, '_'))[1]
   return(x)
@@ -296,15 +316,71 @@ pre.files <- dir(path = dname,
 
 pre.IDs <- unlist(lapply(pre.files, FUN = ID.names))
 
+col_def <- cols(ID = col_integer(),
+                ArgosID = col_integer(),
+                Message_Type = col_factor(levels = c("DIAG", "DS", "GPS")),
+                TransmissionDateTime = col_datetime(format = "%m-%d-%Y %H:%M:%S"),
+                LC = col_integer(),
+                Residual = col_double(),
+                Lat1 = col_double(),
+                Lon1 = col_double(),
+                inside = col_integer(),
+                UTCDateTime = col_datetime(format = "%Y-%m-%d %H:%M:%S"),
+                LocalDateTime = col_datetime(format = "%Y-%m-%d %H:%M:%S"),
+                Date2 = col_date(format = "%Y/%m/%d"),
+                LocalSunrise = col_datetime(format = "%Y-%m-%d %H:%M:%S"),
+                LocalSunset =  col_datetime(format = "%Y-%m-%d %H:%M:%S"),
+                day1night2 = col_integer(),
+                row = col_integer(),
+                include = col_integer(),
+                hr = col_integer())
+
 pre.all <- do.call(rbind, 
                    lapply(pre.files,
-                          FUN = function(x) read.csv(paste0(dname, x)))) %>%
+                          FUN = function(x) readr::read_csv(file = paste0(dname, x),
+                                                            col_types = col_def))) %>%
   mutate(ID.f = as.factor(ArgosID)) %>%
-  filter(include == 1)
+  filter(include == 1) %>%
+  group_by(ID.f) %>%
+  mutate(DaysSinceFirst = as.double((LocalDateTime - min(LocalDateTime))/(60*60*24)))
 
+# This one contains all data.
+pre.all.01 <- do.call(rbind, 
+                      lapply(pre.files,
+                             FUN = function(x) readr::read_csv(file = paste0(dname, x),
+                                                               col_types = col_def))) %>%
+  mutate(ID.f = as.factor(ArgosID)) %>%
+  group_by(ID.f) %>%
+  mutate(DaysSinceFirst = as.double((LocalDateTime - min(LocalDateTime))/(60*60*24)))
 
-write.csv(pre.all, paste0(dname, "Pre_GPS_LC_all.csv"), 
-          row.names=FALSE)
+pre.all.01 %>% group_by(ID.f) %>%
+  mutate(day1 = ifelse(day1night2 == 1, 1, 0)) %>%
+  mutate(night1 = ifelse(day1night2 == 2, 1, 0)) %>%
+  mutate(day1a = ifelse(day1night2 == 1 & include == 1, 1, 0)) %>%
+  mutate(night1a= ifelse(day1night2 == 2 & include == 1, 1, 0)) %>%
+  summarise(Date1 = min(LocalDateTime), 
+            n.days = max(DaysSinceFirst),
+            n.relocations.all = n(),
+            n.day.all = sum(day1),
+            n.night.all = sum(night1),
+            n.day = sum(day1a),
+            n.night = sum(night1a),
+            n.relocations = sum(include)) -> pre.summary
+
+if (!file.exists(paste0("data/pre_sample_summary_", 
+                        file.date, ".csv")))
+  write.csv(pre.summary,
+            paste0("data/pre_sample_summary_", 
+                   file.date, ".csv"),
+            row.names = F, 
+            quote = F)
+
+if (!file.exists(paste0(dname, "Pre_GPS_LC_all_", 
+                        file.date, ".csv")))
+  write.csv(pre.all, paste0(dname, "Pre_GPS_LC_all_", 
+                                   file.date, ".csv"),
+            row.names = F,
+            quote = F)
 
 ```
 
@@ -324,15 +400,6 @@ map.pre <- map.sdbay.zm +
   geom_point(data = pre.all,
              aes(x = Lon1, y = Lat1, color = ID.f),
              alpha = 0.5)+ 
-  # geom_polygon(data = water.df,
-  #              aes(x = long,
-  #                  y = lat,
-  #                  group = group),
-  #              fill = "blue",
-  #              alpha = 0.2) +
-
-  #coord_map() + 
-  #labs(color = 'ARGOS ID') + 
   xlab('Longitude') + ylab('Latitude') + 
   theme(legend.title = element_text(size = 10, hjust = 0.5),
         legend.text = element_text(size = 8, vjust = 0),
@@ -342,9 +409,46 @@ plot(map.pre)
 
 ```
 
+To check for errors in data screening, I make a few plots. Each individual has one or less data point per 4-hour period. 
+```{r}
+p1 <- list()
+k <- 1
+for (k in 1:length(pre.IDs)){
+  pre.all.01 %>% filter(ArgosID == pre.IDs[k]) -> dat.01
+  pre.all %>% filter(ArgosID == pre.IDs[k]) -> dat.1
+  p1[[k]] <-ggplot() + 
+    geom_point(data = dat.01,
+               aes(x = DaysSinceFirst, 
+                   y = hr)) + 
+    geom_point(data = dat.1,
+               aes(x = DaysSinceFirst,
+                   y = hr),
+               shape = 1, size = 4,
+               color = "red",
+               alpha = 0.7) +
+    annotate("rect", xmin = 0, xmax = Inf,
+             ymin = 4, ymax = 8,
+             alpha = 0.3)+
+    annotate("rect", xmin = 0, xmax = Inf,
+             ymin = 12, ymax = 16,
+             alpha = 0.3)+
+    annotate("rect", xmin = 0, xmax = Inf,
+             ymin = 20, ymax = 24,
+             alpha = 0.3) +
+    labs(x = "Days since first transmission",
+         y = "Hr",
+         title = pre.IDs[k])
+    # facet_grid(. ~ ID.f) +
+    # facet_wrap( ~ ID.f, nrow = 3, 
+    #             scales = "free")
+    
+}
 
+```
 
-Do the same for post 
+Examining the plots by eye, seems to have just one reading per 4-hr period within each day. So, I won't be doing the same for the post dataset. 
+
+Read in the post datasets. 
 
 ```{r}
 dname <- "data/files_Apr2018_withNewTags/post/"
@@ -355,14 +459,26 @@ post.IDs <- unlist(lapply(post.files, FUN = ID.names))
 
 post.all <- do.call(rbind, 
                    lapply(post.files,
-                          FUN = function(x) read.csv(paste0(dname, x)))) %>%
+                          FUN = function(x) readr::read_csv(file = paste0(dname, x),
+                                                            col_types = col_def))) %>%
   mutate(ID.f = as.factor(ArgosID)) %>%
-  filter(include == 1)
+  filter(include == 1) %>%
+  group_by(ID.f) %>%
+  mutate(DaysSinceFirst = as.double((LocalDateTime - min(LocalDateTime))/(60*60*24)))
+
+# This one contains all data:
+post.all.01 <- do.call(rbind, 
+                       lapply(post.files,
+                              FUN = function(x) readr::read_csv(file = paste0(dname, x),
+                                                                col_types = col_def))) %>%
+  mutate(ID.f = as.factor(ArgosID)) %>%
+  group_by(ID.f) %>%
+  mutate(DaysSinceFirst = as.double((LocalDateTime - min(LocalDateTime))/(60*60*24)))
 
 map.post <- map.sdbay.zm + 
-   geom_polygon(data = SDBay.df,
+  geom_polygon(data = SDBay.df,
                aes(x = long, y = lat)) +
-               #fill = "blue",
+  #fill = "blue",
                #alpha = 0.6) + 
   geom_polygon(data = SDBay.eelg.2014.df,
                aes(x = long,
@@ -391,17 +507,77 @@ new.files <- dir(path = dname,
 
 new.IDs <- unlist(lapply(new.files, FUN = ID.names))
 
+col_def <- cols(ID = col_integer(),
+                ArgosID = col_integer(),
+                Message_Type = col_factor(levels = c("DIAG", "DS", "GPS")),
+                TransmissionDateTime = col_datetime(format = "%m/%d/%Y %H:%M:%S"),
+                LC = col_integer(),
+                Residual = col_double(),
+                Lat1 = col_double(),
+                Lon1 = col_double(),
+                inside = col_integer(),
+                UTCDateTime = col_datetime(format = "%Y-%m-%d %H:%M:%S"),
+                LocalDateTime = col_datetime(format = "%Y-%m-%d %H:%M:%S"),
+                Date2 = col_date(format = "%Y/%m/%d"),
+                LocalSunrise = col_datetime(format = "%Y-%m-%d %H:%M:%S"),
+                LocalSunset =  col_datetime(format = "%Y-%m-%d %H:%M:%S"),
+                day1night2 = col_integer(),
+                row = col_integer(),
+                include = col_integer(),
+                hr = col_integer())
 new.all <- do.call(rbind, 
                    lapply(new.files,
-                          FUN = function(x) read.csv(paste0(dname, x)))) %>%
-   mutate(ID.f = as.factor(ArgosID)) %>%
- filter(include == 1)
+                          FUN = function(x) readr::read_csv(file = paste0(dname, x),
+                                                            col_types = col_def))) %>%
+  mutate(ID.f = as.factor(ArgosID)) %>%
+  filter(include == 1) %>%
+  group_by(ID.f) %>%
+  mutate(DaysSinceFirst = as.double((LocalDateTime - min(LocalDateTime))/(60*60*24)))
+
+new.all.01 <- do.call(rbind, 
+                      lapply(new.files,
+                             FUN = function(x) readr::read_csv(file = paste0(dname, x),
+                                                               col_types = col_def))) %>%
+  mutate(ID.f = as.factor(ArgosID)) %>%
+  group_by(ID.f) %>%
+  mutate(DaysSinceFirst = as.double((LocalDateTime - min(LocalDateTime))/(60*60*24)))
 
 post.all <- rbind(post.all, new.all) %>%
   filter(Lat1 < 32.66)
 
-write.csv(post.all, paste0(dname, "Post_GPS_LC_all.csv"), 
-          row.names=FALSE)
+post.all.01 <- rbind(post.all.01, new.all.01) %>%
+  filter(Lat1 < 32.66)
+
+post.all.01 %>% group_by(ID.f) %>%
+  mutate(day1 = ifelse(day1night2 == 1, 1, 0)) %>%
+  mutate(night1 = ifelse(day1night2 == 2, 1, 0)) %>%
+  mutate(day1a = ifelse(day1night2 == 1 & include == 1, 1, 0)) %>%
+  mutate(night1a= ifelse(day1night2 == 2 & include == 1, 1, 0)) %>%
+  summarise(Date1 = min(LocalDateTime), 
+            n.days = max(DaysSinceFirst),
+            n.relocations.all = n(),
+            n.day.all = sum(day1),
+            n.night.all = sum(night1),
+            n.day = sum(day1a),
+            n.night = sum(night1a),
+            n.relocations = sum(include)) -> post.summary
+
+
+if (!file.exists(paste0("data/post_sample_summary_", 
+                        file.date, ".csv")))
+  write.csv(post.summary,
+            paste0("data/post_sample_summary_", 
+                   file.date, ".csv"),
+            quote = F,
+            row.names = F)
+
+if (!file.exists(paste0(dname, "Post_GPS_LC_all_", 
+                        file.date, ".csv")))
+  write.csv(post.all, 
+            paste0(dname, "Post_GPS_LC_all_",
+                   file.date, ".csv"),
+            quote = F,
+            row.names = F)
 
 map.post <- map.sdbay.zm + 
   geom_polygon(data = SDBay.df,
@@ -433,7 +609,7 @@ Section 3: Compute HRs
 
 ```{r}
 # when trying to compute HR for each individual, some don't have enough data
-# extract those with at least 100 data points:
+# extract those with at least 50 data points:
 
 pre.kd <- HR.analysis.step1(min_n, pre.all, tagproj, grid = 300)
 ```
@@ -467,7 +643,7 @@ plot(h.adhoc.pre$figure)
 
 ```
 
-Looking at these plots, multiplier = 0.6 may be the smallest value with a contiguous 95% UD.  This is equivalent of h = 148.96 ~ 145.  
+Looking at these plots, multiplier = 0.6 may be the smallest value with a contiguous 95% UD.  This is equivalent of h = 148.96.  Rounded to 149. 
 
 ```{r}
 ## Section 3.1.2
@@ -475,7 +651,7 @@ Looking at these plots, multiplier = 0.6 may be the smallest value with a contig
 # grid values from 50 to 300 don't change the outcome;
 # extent values from 1 to 200 don't change the outcome either
 
-h.pre <- 145
+h.pre <- round(pre.kd$kd.href@h$h * 0.6)
 
 pre.HR <- compute.area(h.pre, pre.kd$list.data, grid = 300)
 writeOGR(obj = pre.HR$ver.50, 
@@ -515,13 +691,12 @@ plot(h.adhoc.post$figure)
 
 ```
 
-For post data, multiplier = 0.4 may be the smallest value with a contiguous 95% UD.  This is equivalent of h = 97.16. So, h = 100 may be okay?
-
+For post data, multiplier = 0.4 may be the smallest value with a contiguous 95% UD.  This is equivalent of h = 97.16. 
 
 ```{r}
 ## Section 3.1.2
 ##Visually optimized hlim = c(0.565,1.5), grid=300
-h.post <- 100
+h.post <- round(post.kd$kd.href@h$h * 0.4)
 post.HR <- compute.area(h.post, post.kd$list.data, grid = 300)
 writeOGR(obj = post.HR$ver.50, 
          dsn = "shapefiles_July2018/post_HR_50.shp",
@@ -540,7 +715,7 @@ writeOGR(obj = post.HR$ver.95,
 #points(pre.all.utm, col="blue")
 ```
 
-Select all possible combinations of 6 (ID.pre.min_n) individuals from the post data. There are 8008 possible combinations when min_n = 50. It takes a bit of time, I select 1000 of them. Because of the sample size decreases, I use h.pre for this.
+Select all possible combinations of 6 (ID.pre.min_n) individuals from the post data. There are 8008 possible combinations when min_n = 50. It takes a bit of time, I select 1000 of them. Because the sample size decreases, I use h.pre for this.
 
 ```{r echo=FALSE, results="hide"}
 run.date <- "2018-07-17"
@@ -614,12 +789,12 @@ hist.dif.95 <- ggplot(data = dif.95.df) +
 
 #plot(hist.dif.95)
 
-quantile(dif.50.df$dif, c(0.025, 0.05, 0.10, 0.15, 0.50, 0.975))
-quantile(dif.95.df$dif, c(0.025, 0.05, 0.10, 0.15, 0.50, 0.975))
-
-dif.50.df %>% count(dif>0)
-
-dif.95.df %>% count(dif > 0)
+# quantile(dif.50.df$dif, c(0.025, 0.05, 0.10, 0.15, 0.50, 0.975))
+# quantile(dif.95.df$dif, c(0.025, 0.05, 0.10, 0.15, 0.50, 0.975))
+# 
+# dif.50.df %>% count(dif>0)
+# 
+# dif.95.df %>% count(dif > 0)
 
 
 ```
@@ -649,7 +824,7 @@ plot(h.adhoc.pre.day$figure)
 multiplier = 0.7 may be good. 
 
 ```{r}
-h.pre.day <- pre.kd.day$kd.href@h$h * 0.7
+h.pre.day <- round(pre.kd.day$kd.href@h$h * 0.7)
 # or use the same value as before
 
 pre.HR.day <- compute.area(h.pre.day, pre.kd.day$list.data, grid = 300)
@@ -686,7 +861,7 @@ plot(h.adhoc.pre.night$figure)
 multiplier = 0.5 may be good. 
 
 ```{r}
-h.pre.night <- pre.kd.night$kd.href@h$h * 0.5
+h.pre.night <- round(pre.kd.night$kd.href@h$h * 0.5)
 # or use the same value as before
 
 pre.HR.night <- compute.area(h.pre.night, pre.kd.night$list.data, grid = 300)
@@ -715,9 +890,9 @@ plotLSCV(post.kd.day$kd.LSCV)
 
 ```{r}
 h.adhoc.post.day <- HR.analysis(h.multiplier, 
-                               post.kd.day$kd.href, 
-                               post.kd.day$list.data, 
-                               grid = 300)
+                                post.kd.day$kd.href, 
+                                post.kd.day$list.data, 
+                                grid = 300)
 plot(h.adhoc.post.day$figure)
 
 ```
@@ -753,9 +928,9 @@ plotLSCV(post.kd.night$kd.LSCV)
 
 ```{r}
 h.adhoc.post.night <- HR.analysis(h.multiplier, 
-                                 post.kd.night$kd.href, 
-                                 post.kd.night$list.data, 
-                                 grid = 300)
+                                  post.kd.night$kd.href, 
+                                  post.kd.night$list.data, 
+                                  grid = 300)
 plot(h.adhoc.post.night$figure)
 
 ```
@@ -1070,7 +1245,71 @@ map.post.night.HR <- map.sdbay.zm +
 #plot(map.post.night.HR)
 ```
 
+Simple plots with day/night for the pre:
+Plot the data points to see what they look like:
 
+```{r}
+map.pre.day.night <- map.sdbay.zm + 
+  geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat)) +
+               #fill = "blue",alpha = 0.6) + 
+  geom_polygon(data = SDBay.eelg.2008.df,
+               aes(x = long,
+                   y = lat,
+                   group = group),
+               fill = "green",
+               alpha = 0.5) +
+  geom_point(data = pre.all,
+             aes(x = Lon1, y = Lat1, 
+                 color = as.factor(day1night2)),
+             alpha = 0.5)+ 
+  xlab('Longitude') + ylab('Latitude') + 
+  scale_color_discrete(labels = c("Day", "Night"),
+                       name = NULL) 
+
+  theme(legend.title = NULL,
+        legend.text = element_text(size = 8, vjust = 0))
+        #legend.position = "none")
+
+plot(map.pre.day.night)
+
+```
+
+```{r}
+map.post.day.night <- map.sdbay.zm + 
+  geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat)) +
+               #fill = "blue",alpha = 0.6) + 
+  geom_polygon(data = SDBay.eelg.2008.df,
+               aes(x = long,
+                   y = lat,
+                   group = group),
+               fill = "green",
+               alpha = 0.5) +
+  geom_point(data = post.all,
+             aes(x = Lon1, y = Lat1, 
+                 color = as.factor(day1night2)),
+             alpha = 0.5)+ 
+  xlab('Longitude') + ylab('Latitude') + 
+  scale_color_discrete(labels = c("Day", "Night"),
+                       name = NULL) 
+
+plot(map.post.day.night)
+
+```
+
+
+Bring in the body size information. This was done in deployment_table.R script. 
+```{r}
+dat.table <- read.csv(paste0("data/all_sample_summary_size_",
+                   file.date, ".csv"))
+
+
+```
+
+
+
+Save figures:
 ```{r}
 if (save.figure){
   ggsave(filename = paste0("figures/HR_pre_h_comp_", Sys.Date(), ".png"),
